# garbage_collector

./: .gitignore  app.py
ICLE500-testing/: ICLE_rubric_rated_500.csv  ICLE_rubric_rated_500.xlsx  MANIFEST.TXT  readme.txt
brave-monitor/: lang_extension.sh  list_urls.sh  setup.sh
c-cli/: setup.sh  setup2.sh  setup3.sh
c-programming/: a.out  calculate-average-of-array.c  exact-string-match.c  hello-world.c  matrix.txt  minimal-c-rest-api.sh  out  quantiles.c  quantiles.h  read  read-text-file.c  sorting.c  sorting.h  stats-cli.c  test.txt
cefr-classifcation/: setup-decoder.sh  setup.sh  setup2.sh
cli-bash-stuff/: nested-dict.sh  try1.sh
discord-clone/: setup.sh
dockerized-rclone/: Dockerfile  build.sh  install_rclone.sh  run.sh
docs/: README.md  mkdocs.yml
flask-setupc/: init_project.sh
fluent-c/: data.csv  dummy.csv  dummy_data.py  hi.c  (+6 more)
google-login/flask-app/: pyproject.toml
google-login/flask-app/flask_app/: app.py  db.py
google-login/flask-google-login-jwt/: pyproject.toml
google-login/flask-google-login-jwt/clients/venv-client/: .env  requirements.txt  run.py
google-login/flask-google-login-jwt/flask_google_login_jwt/: __init__.py  create_flask_app.py
google-login/flask-google-login-jwt/flask_google_login_jwt/domain/: User.py
google-login/flask-google-login-jwt/flask_google_login_jwt/infrastructure/: __init__.py  database.py  repositories.py
google-login/flask-google-login-jwt/flask_google_login_jwt/routes/: __init__.py  authorize.py  login.py
google-login/flask-google-login-jwt/flask_google_login_jwt/routes/templates/: login.html
(+852 files in other folders)
