[tool.poetry]
name = "flask-app"
version = "0.1.0"
description = ""
authors = ["bernardo <bernardo.stearns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-login = "^0.6.3"
oauthlib = "^3.2.2"
pyopenssl = "^24.2.1"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
