[tool.poetry]
name = "flask-google-login-jwt"
version = "0.1.0"
description = ""
authors = ["bernardo <bernardo.stearns@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
flask-login = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
